# metagarden

./: CMakeLists.txt
include/: config.h  functions.h  node.h  prog.h  rand.h  str_utils.h
src/: config.c  functions.c  main.c  prog.c  rand.c  str_utils.c
